upd: statistics in event ticket assignment
