# internal/api/routes/event_ticket_assignment/event_ticket_assignment_admin.route.go
@@ -4,6 +4,7 @@ import (
 	event_ticket_assignment_controller "bookify/internal/api/controller/event_ticket_assignment"
 	"bookify/internal/config"
 	"bookify/internal/domain"
+	event_repository "bookify/internal/repository/event/repository"
 	eventticketrepository "bookify/internal/repository/event_ticket/repository"
 	event_ticket_assignment_repository "bookify/internal/repository/event_ticket_assignment/repository"
 	userrepository "bookify/internal/repository/user/repository"
@@ -17,9 +18,10 @@ func AdminEventTicketAssignmentRouter(env *config.Database, timeout time.Duratio
 	evta := event_ticket_assignment_repository.NewEventTicketAssignmentRepository(db, domain.CollectionEmployeeTicketAssigment)
 	ur := userrepository.NewUserRepository(db, domain.CollectionUser)
 	evt := eventticketrepository.NewEventTicketRepository(db, domain.CollectionEventTicket)
+	ev := event_repository.NewEventRepository(db, domain.CollectionEvent)
 
 	eventType := &event_ticket_assignment_controller.EventTicketAssignmentController{
-		EventTicketAssignmentUseCase: event_ticket_assignment_usecase.NewEventTicketAssignmentUseCase(env, timeout, evta, evt, ur),
+		EventTicketAssignmentUseCase: event_ticket_assignment_usecase.NewEventTicketAssignmentUseCase(env, timeout, evta, ev, evt, ur),
 		Database:                     env,
 	}
 
@@ -27,4 +29,5 @@ func AdminEventTicketAssignmentRouter(env *config.Database, timeout time.Duratio
 	router.POST("/create", eventType.CreateOne)
 	router.PUT("/update", eventType.UpdateOne)
 	router.POST("/delete", eventType.DeleteOne)
+	router.GET("/statistics-revenue/event_id", eventType.StatisticsRevenueByEventID)
 }
